# ImportSpy

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  README.rst  SECURITY.md  funding.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yml  sitemap.xml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  common-matrix.yml  python-package.yml
advanced/spymodel/: index.html
advanced/violations/: index.html
api-reference/: index.html
contracts/examples/: index.html
contracts/syntax/: index.html
diagrams/: importspy-embedded-mode.drawio  importspy-spy-model-architecture.drawio  importspy-works.drawio
docs/: api-reference.md  index.md  requirements.txt  robots.txt
docs/advanced/: spymodel.md  violations.md
docs/contracts/: examples.md  syntax.md
docs/errors/: contract-violations.md  contract_violations.md  error_table.md
docs/intro/: install.md  overview.md  quickstart.md
docs/modes/: cli.md  embedded.md
docs/source/: api_reference.rst  conf.py  example.rst  get_started.rst  importspy.rst  index.rst  modules.rst  overview.rst  sponsorship.rst  vision.rst
docs/source/_static/: custom.css
docs/source/advanced/: advanced_index.rst  api_core.rst  api_examples.rst  api_models.rst  api_reference.rst  api_reference_index.rst  architecture_index.rst
docs/source/beginner/: beginner_index.rst  poetry_basics.rst  pydantic_in_importspy.rst  python_reflection.rst
docs/source/get_started/: example_overview.rst  installation.rst  run_example.rst
docs/source/modules/: importspy.rst  importspy_utils.rst
docs/source/overview/: story.rst  understanding_importspy_index.rst  use_cases_index.rst
docs/use_cases/: index.md
errors/contract-violations/: index.html
example/: extension.py  package.py
examples/import_validation/: developer_code.py  importing_module.py
examples/plugin_based_architecture/: extension.py  package.py  spymodel.yml
intro/install/: index.html
intro/overview/: index.html
intro/quickstart/: index.html
modes/cli/: index.html
modes/embedded/: index.html
overrides/: extra.html
search/: search_index.json
src/importspy/: __init__.py  cli.py  config.py  constants.py  contexts.py  errors.py  log_manager.py  models.py  persistences.py  s.py  validators.py  violation_systems.py
tests/: conftest.py  pytest.ini  test_s.py
tests/utils/: test_module_utils.py
tests/validators/: test_argument_validator.py  test_attribute_validator.py  test_environment_validator.py  test_function_validator.py  test_method_validator.py  test_module_validator.py  test_python_validator.py  test_runtime_validator.py  test_system_validator.py
use_cases/: index.html
(+58 files in other folders)
