[tool.poetry]
name = "importspy"
version = "0.2.0"
description = "ImportSpy ensures structural integrity, runtime compliance, and security for external modules, preventing inconsistencies and enforcing controlled execution."  
license = "MIT"
authors = ["Luca Atella <atellaluca@outlook.it>"]
readme = "README.rst"
packages = [{include = "importspy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
furo = "^2024.8.6"
sphinx = ">=5,<9"
pytest = "^8.3.3"

[tool.poetry.urls]
repository = "https://github.com/atellaluca/importspy"
documentation = "https://importspy.readthedocs.io"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
