[tool.poetry]
name = "importspy"
version = "0.4.1"
description = "ImportSpy ensures structural integrity, runtime compliance, and security for external modules, preventing inconsistencies and enforcing controlled execution."  
license = "MIT"
authors = ["Luca Atella <atellaluca@outlook.it>"]
readme = "README.md"
packages = [{include = "importspy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
ruamel-yaml = "^0.18.10"
typer = "^0.15.2"
pymdown-extensions = "^10.16.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mkdocs = "^1.6.1"
mkdocstrings = {version = "^0.30.0", extras = ["python"]}
mkdocs-material = "^9.6.16"

[tool.poetry.urls]
Repository = "https://github.com/atellaluca/importspy"
Documentation = "https://importspy.readthedocs.io"

[tool.poetry.scripts]
importspy = "importspy.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
